Fixed a bug with the z-index

--- a/src/app/_components/Skills/techStack.module.scss
+++ b/src/app/_components/Skills/techStack.module.scss
@@ -50,6 +50,7 @@
       width: fit-content;
       white-space: nowrap;
       position: relative;
+      z-index: 9999;
       &:hover {
         animation-play-state: paused;
       }
